2018-03-05  Qian Yun  <oldk1331@gmail.com>

       * src/graph/include/G.h, src/graph/view2D/main2d.c,
       src/graph/view3D/globals.h, src/graph/view3D/main3d.c:
       Fix 'write' to Postscript file

2018-03-05  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/texmacs.spad, src/algebra/outform.spad,
	src/lisp/fricas-lisp.lisp,
	contrib/texmacs/fricas/progs/fricas-input.scm,
	contrib/texmacs/fricas/doc/FriCAS-TeXmacs-characters.tm:
	Improve Texmacs interface

2018-02-27  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/combfunc.spad: Remove unsound power
	simplification

2018-02-26  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Fix '^'

2018-02-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot: Fix breakage due to
	'$resolve_level'

2018-02-26  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/gnudraw.spad, src/algebra/openmath.spad,
	src/algebra/plottool.spad, src/algebra/space.spad,
	src/algebra/transsolve.spad: Eliminate non-existing
	imports

2018-02-25  Qian Yun  <oldk1331@gmail.com>

	* src/hyper/hthits.c, src/include/hthits.H1:
	Eliminate 'register' keyword

2018-02-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/viewDef.spad: Fix index bound

2018-02-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-resolv.boot, src/interp/i-toplev.boot:
	Limit recursion depth when resolving types

2018-02-24  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-funsel.boot: Fix recursion in 'has'

2018-02-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-util.boot, src/interp/category.boot,
	src/interp/clam.boot, src/interp/functor.boot,
	src/interp/g-boot.boot, src/interp/i-map.boot,
	src/interp/macros.lisp, src/interp/msgdb.boot:
	Misc cleanups

2018-02-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/stream.spad,
	src/algebra/tree.spad: Fix 'leaf?'

2018-02-21  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/mring.spad: Fix 'construct'
