@@ -1,3 +1,8 @@
+2018-03-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/lisp/primitives.lisp: Fix compatiblility with
+	sbcl-1.4.5
+
 2018-03-05  Qian Yun  <oldk1331@gmail.com>
 
        * src/graph/include/G.h, src/graph/view2D/main2d.c,
